--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -80,7 +80,8 @@ const langPrefix = currentLang === 'en' ? '/en' : currentLang === 'ja' ? '/ja' :
   <meta name="twitter:title" content={title}>
   <meta name="twitter:description" content={description}>
   <meta name="twitter:image" content={ogImage}>
-  <meta name="twitter:site" content="@paulkuo">
+  <meta name="twitter:site" content="@zarqarwi">
+  <meta name="twitter:creator" content="@zarqarwi">
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1">
   <link rel="canonical" href={canonical}>
   {hreflangs.map(h => (
